...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="qrP-u5-TZz">
                                <rect key="frame" x="41.5" y="406" width="331" height="138"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XOV-sQ-wI3">
                                        <rect key="frame" x="0.0" y="0.0" width="331" height="30"/>
                                        <state key="normal" title="First"/>
                                        <connections>
                                            <segue destination="fNF-Am-zsp" kind="show" identifier="showFirstVC" id="Rc0-pn-TNe"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oaQ-8d-d9W">
                                        <rect key="frame" x="0.0" y="54" width="331" height="30"/>
                                        <state key="normal" title="Second"/>
                                        <connections>
                                            <segue destination="gtz-Cq-8qu" kind="show" identifier="showSecondVC" id="JbN-Qv-QOy"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sPG-7K-NkQ">
                                        <rect key="frame" x="0.0" y="108" width="331" height="30"/>
...
                    <view key="view" contentMode="scaleToFill" id="Djm-3L-1QI">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggJ-W7-Hpv">
                                <rect key="frame" x="347" y="102" width="56" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="add"/>
                                <state key="normal" image="plus" catalog="system"/>
                                <connections>
                                    <action selector="actionAdd:" destination="gtz-Cq-8qu" eventType="touchUpInside" id="OSO-co-Y6I"/>
                                    <action selector="actionSearch:" destination="fNF-Am-zsp" eventType="touchUpInside" id="hqI-iW-e5M"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="16" y="96" width="331" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bSc-a9-2x5">
                                <rect key="frame" x="347" y="102" width="51" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="search"/>
                                <state key="normal" image="magnifyingglass" catalog="system"/>
                                <connections>
                                    <action selector="actionSearch:" destination="fNF-Am-zsp" eventType="touchUpInside" id="KfR-dd-ds1"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ays-uB-7DF">
...
